# ACT-TP3

./: :q  CMakeLists.txt  README.md  header.h  image.c  image.h  image_reader.c  image_reader.h  main.c  palette.c  palette.h
